--- a/cloud/package.json
+++ b/cloud/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "node": "^22.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
